# usdCalc

./: .gitignore  CHECKLIST.md  CLI.md  FEATURES.md  HOMEBREW.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE.md  START_HERE.md  USAGE.md  currency_converter.py  install.sh  pyproject.toml  requirements.txt  run.sh  setup.py  test_converter.py
Formula/: inr-usd-converter.rb
resources/: inr-usd-converter.desktop
